--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
       frameborder="0" scrolling="0" width="85px" height="20px">
     </iframe>.
   </li>
-<!--  <li><strong>Jun 2019</strong> Summer NLP Intern at <a href="https://www.cs.tsinghua.edu.cn/csen/"> Tsinghua University</a>, Beijing.</li>-->
 </ul>
 
 <!--Recent Publications-->
 <h2 id="publications">Publications</h2>
 
+<h3 id="2022">2022</h3>
 <ol>
   <li>
     <div style="float:left;">
@@ -217,7 +217,7 @@
     <div style="float:right;">
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
     </div>
-    <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em>, 2022.
+    <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -233,6 +233,42 @@
   
   <li>
     <div style="float:left;">
+      <font color="#00066f">
+        GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals
+      </font>
+    </div>
+    <div style="float:left;">
+      <strong>Shuyue Jia</strong>, Yimin Hou, Xiangmin Lun, Ziqian Hao, Yan Shi, Yang Li, Rui Zeng, Jinglei Lv
+    </div>
+    <br><br>
+    <div style="float:left;">
+      <em>arXiv preprint arXiv:2006.08924</em>
+    </div>
+    <div style="float:right;">
+      <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> GNN Survey</a>
+      <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
+      <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
+      <a href="https://arxiv.org/abs/2006.08924"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div>
+    <br><br>
+    <details>
+      <summary style="outline:none">See More</summary>
+      <ul>
+        Traditional works classify EEG signals without considering the topological relationship among electrodes. Thus, a graph convolutional neural network is presented while cooperating with the functional topological relationship of electrodes.
+        <div>
+          <div style="text-align:center">
+            <img width="99%device-width" src="imgs/Picture2.jpg" alt="Project2">
+          </div>
+        </div>
+      </ul>
+    </details>
+  </li>
+</ol>
+  
+<h3 id="2021">2021</h3>
+<ol>  
+  <li>
+    <div style="float:left;">
       <font color="#00066f">Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition</font>
     </div><br>
     <div style="float:left;">
@@ -242,7 +278,7 @@
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <em><br>Frontiers in Bioengineering and Biotechnology</em>, 2021.
+    <em><br>Frontiers in Bioengineering and Biotechnology</em> (IF: 6.064)
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -261,6 +297,25 @@
   
   <li>
     <div style="float:left;">
+      <font color="#00066f">
+        Improving Performance: a Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice
+      </font>
+    </div><br>
+    <div style="float:left;">
+      Yan Shi, Hangcheng Yuan, Chenao Xiong, <strong>Shuyue Jia</strong>, Jingjing Liu, Hong Men
+    </div>
+    <div style="float:right;">
+      <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div>
+    <br><br>
+    <em>Sensors &amp; Actuators: B. Chemical</em> (IF: 9.221)
+  </li>
+</ol>
+  
+<h3 id="2020">2020</h3>
+<ol>  
+  <li>
+    <div style="float:left;">
       <font color="#00066f"> 
         A Novel Approach of Decoding EEG Four-Class Motor Imagery Tasks via Scout ESI and CNN
       </font>
@@ -270,7 +325,7 @@
       <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     Yimin Hou, Lu Zhou, <strong>Shuyue Jia</strong>, Xiangmin Lun
-    <em><br>Journal of Neural Engineering</em>, 2020.
+    <em><br>Journal of Neural Engineering</em> (IF: 5.043)
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -295,89 +350,12 @@
         </div>
       </ul>
     </details>
-  
   </li>
-  
-  <!--  ####################################################################################################################################################-->
-  <hr>
-  
-  <li>
-    <div style="float:left;">
-      <font color="#00066f">
-        GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals
-      </font>
-    </div><br>
-    <div style="float:left;">
-      <strong>Shuyue Jia</strong>, Yimin Hou, Xiangmin Lun, Ziqian Hao, Yan Shi, Yang Li, Rui Zeng, Jinglei Lv
-    </div>
-    <br>
-    <div style="float:left;">
-      <em>arXiv preprint arXiv:2006.08924</em>, 2022.
-    </div>
-    <div style="float:right;">
-      <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> Dynamic GNN Survey</a>
-      <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
-      <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
-      <a href="https://arxiv.org/abs/2006.08924"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div><br><br>
-    <details>
-      <summary style="outline:none">See More</summary>
-      <ul>
-        Traditional works classify EEG signals without considering the topological relationship among electrodes. Thus, a graph convolutional neural network is presented while cooperating with the functional topological relationship of electrodes.
-        <div>
-          <div style="text-align:center">
-            <img width="99%device-width" src="imgs/Picture2.jpg" alt="Project2">
-          </div>
-        </div>
-      </ul>
-    </details>
-  </li>
-    
-  <hr>
-  
-  <li>
-    <div style="float:left;">
-      <font color="#00066f">
-        Attention-based Graph ResNet for Motor Intent Detection from Raw EEG signals
-      </font>
-    </div><br>
-    <div style="float:left;">
-      <strong>Shuyue Jia *</strong>, Yimin Hou, Yan Shi, Yang Li
-    </div>
-    <div style="float:right;">
-      <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
-      <a href="https://arxiv.org/abs/2007.13484"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div>
-    <em><br>arXiv preprint arXiv:2007.13484</em>, 2021.
-    <details>
-      <summary style="outline:none">See More</summary>
-      <ul>
-        The exhibited interaction between EEG channels might not be appropriately measured via Euclidean distance. To fill the gap, an attention-based graph residual network, a novel structure of Graph Convolutional Neural Network (GCN), was presented to detect human motor intents from raw EEG signals, where the topological structure of EEG electrodes was built as a graph. Meanwhile, deep residual learning with a full-attention architecture was introduced to address the degradation problem concerning deeper networks in raw EEG motor imagery (MI) data.
-      </ul>
-    </details>
-  </li>
-
-  <hr>
-  
-  <li>
-    <div style="float:left;">
-      <font color="#00066f">
-        Improving Performance: a Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice
-      </font>
-    </div><br>
-    <div style="float:left;">
-      Yan Shi, Hangcheng Yuan, Chenao Xiong, <strong>Shuyue Jia</strong>, Jingjing Liu, Hong Men
-    </div>
-    <div style="float:right;">
-      <a href="https://www.sciencedirect.com/science/article/pii/S0925400521001143"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
-    </div>
-    <br><br>
-    <em>Sensors &amp; Actuators: B. Chemical</em>, 2021.
-  </li>
+</ol>
 
 <hr>
-
-</ol><ul><b>* denotes the Corresponding Author.</b></ul>
+  
+<ul><b>* denotes the Corresponding Author.</b></ul>
 
 <!--Academic Services-->
 <h2 id="Academic Services">Academic Services</h2>
