--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <!--	<li>-->
 <!--<a href="https://publons.com/researcher/4330829/shuyue-jia/"><strong>Reviewer</strong></a> for <em>IEEE Journal of Biomedical and Health Informatics</em><br>-->
 <!--  </li>-->
-	<li><strong>Student Member</strong> of <em>IEEE</em></li>
+	<li><strong>Student Member</strong> of <em>IEEE</em> and<a href="https://member.acm.org/~shuyuej"> <em>ACM</em></a></li>
 </ol>
 
 <!--Previous Awards-->
