--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     </div>
     <br><br>
     <div style="float:left;">
-      <em>arXiv preprint arXiv:2006.08924</em>
+      <em>IEEE Transactions on Neural Networks and Learning Systems</em> (IEEE T-NNLS, IF: 14.255)
     </div>
     <div style="float:right;">
       <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> GNN Survey</a>
