--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
         frameborder="0" scrolling="0" width="85px" height="20px">
       </iframe>.
     </li>
-    <li><strong>Apr 2022</strong> CV Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing. (Supervisor: Dr. Hui Zhang)</li>
+    <li><strong>Apr 2022</strong> CV Research Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing, working on the video panoptic segmentation. (Supervisor: Dr. Hui Zhang)</li>
     <strong>Dec 2021</strong> One Paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.</li>
-  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai. (Supervisor: Dr. Shuang Zhou)</li>
+  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai, working on the medical named entity recognition, concept mapping, etc. (Supervisor: Dr. Shuang Zhou)</li>
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
     a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification
