--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
 <ul style="list-style:none; margin:0; padding:0">
   <li>
     <li>
+      <strong>Aug 2022</strong> One Paper <a href="https://arxiv.org/abs/2006.08924"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
+    </li>
+    <li>
       <strong>Aug 2022</strong> One Paper NLNet accepted by <em>IEEE MMSP</em>
       <iframe
         src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
