--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
     <li><a href="./resources/Computer_Vision_History.pdf"> <i class="fab fa fa-file-pdf-o"></i> A Brief History of Computational Vision by Prof. Song-Chun Zhu</a></li>
     <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html"> <i class="fab fa fa-file-pdf-o"></i> You and Your Research by Prof. Richard Hamming</a></li>
     <li><a href="https://zhuanlan.zhihu.com/p/338193330"> <i class="fab fa fa-file-pdf-o"></i> Columbia University Ph.D. (CV Track) Summary by Prof. Mike Shou</a></li>
-
+    <li><a href="./resources/How-to-Be-a-Successful-PhD-Student.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Be a Successful PhD CS Student</a></li>
+    
   </details>
   
   <br />
