--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p><img class="profile-picture" src="./imgs/Marathon_Profile.jpg" /></p>
   
 <p>
-  I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by Dr. Shiqi Wang. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, under the supervision of Prof. Yimin Hou and Dr. Jinglei Lv.
+  I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, under the supervision of <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
   
   <br />
   <br />
