--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         Traditional works classify EEG signals without considering the topological relationship among electrodes. Thus, a graph convolutional neural network is presented while cooperating with the functional topological relationship of electrodes.
         <div>
           <div style="text-align:center">
-            <img width="99%device-width" src="imgs/Picture2.jpg" alt="Project2">
+            <img width="99%device-width" src="imgs/Picture2.png" alt="Project2">
           </div>
         </div>
       </ul>
