--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!--Short Bio Information-->
 <h2 id="about-me">Bio</h2>
 
-<p><img class="profile-picture" src="./imgs/Profile.jpg" /></p>
+<p><img class="profile-picture" src="./imgs/Profile.png" /></p>
   
 <p>
   I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, under the supervision of <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
