--- a/css/main.css.tmp.html
+++ b/css/main.css.tmp.html
@@ -1,3 +1,4 @@
+<style>
 html {
     height: 100%;
     margin: 0;
@@ -89,8 +90,8 @@ hr{border:0;height:0;border-top:1px solid rgba(0,0,0,0.1);border-bottom:1px soli
 }
 
 .content .profile-picture{
-	height: 340px;
-	width: 260px;
+	height: 320px;
+	width: 230px;
 	position: relative;
 	float: right;
 	border-radius: 10%}
@@ -109,3 +110,4 @@ table tr th{font-weight:bold;border:1px solid #cccccc;text-align:left;margin:0;p
 table tr td{border:1px solid #cccccc;text-align:left;margin:0;padding:6px 13px}
 table tr th :first-child,table tr td :first-child{margin:0}
 table tr th :last-child,table tr td :last-child{margin:0}
+</style>
