--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 <p><img class="profile-picture" src="./imgs/Profile.png" /></p>
   
 <p>
-  I am an M.Phil. student in Computer Science at the <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Prior to joining CityU, I received my bachelor's degree at the <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, under the supervision of <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
+  I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Prior to joining CityU, I received my bachelor's degree from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, under the supervision of <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
   
   <br />
   <br />
-  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing and the Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
+  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by Dr. Hui Zhang, and the Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by Dr. Shuang Zhou. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
   
   <br />
   <br />
@@ -178,9 +178,9 @@
         frameborder="0" scrolling="0" width="85px" height="20px">
       </iframe>.
     </li>
-    <li><strong>Apr 2022</strong> CV Research Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing, working on the video panoptic segmentation. (Supervisor: Dr. Hui Zhang)</li>
+<!--<li><strong>Apr 2022</strong> CV Research Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing, working on the video panoptic segmentation.</li>-->
     <strong>Dec 2021</strong> One Paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.</li>
-  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai, working on the medical named entity recognition, concept mapping, etc. (Supervisor: Dr. Shuang Zhou)</li>
+<!--  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai, working on the medical named entity recognition, concept mapping, etc.</li>-->
   <li>
     <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
     a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification
