--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
 <!--Short Bio Information-->
 <h2 id="about-me">Bio</h2>
 
-<p><img class="profile-picture" src="./imgs/Profile.png" /></p>
-  
+  <p><img class="profile-picture" src="./imgs/Profile.png"/></p>
 <p>
   I am an M.Phil. student in Computer Science at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/">Dr. Shiqi Wang</a>. Prior to joining CityU, I received my bachelor's degree from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a> in Jilin, China, under the supervision of <a href="https://ieeexplore.ieee.org/author/37290052900">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html">Dr. Jinglei Lv</a>.
   
   <br />
   <br />
-  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by Dr. Hui Zhang, and the Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by Dr. Shuang Zhou. In summer 2017, I attended a summer school at the <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
+  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a> in Beijing, advised by Dr. Hui Zhang, and the Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a> in Shanghai, advised by Dr. Shuang Zhou. In the summer of 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a> in the United States.
   
   <br />
   <br />
@@ -364,10 +363,10 @@
 <!--Academic Services-->
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
-<!--	<li>-->
-<!--<a href="https://publons.com/researcher/4330829/shuyue-jia/"><strong>Reviewer</strong></a> for <em>IEEE Journal of Biomedical and Health Informatics</em><br>-->
-<!--  </li>-->
-	<li><strong>Student Member</strong> of <em>IEEE</em> and<a href="https://member.acm.org/~shuyuej"> <em>ACM</em></a></li>
+  <li>
+    <a href="https://publons.com/researcher/4330829/shuyue-jia/"><strong>Reviewer</strong></a> for <em>AAAI</em>, <em>IEEE T-NNLS</em>, <em>IEEE T-MM</em>, and <em>ACM TOMM</em>, and <em>IEEE Journal of Biomedical and Health Informatics</em><br>
+  </li>
+  <li><strong>Student Member</strong> of <em>IEEE</em> and<a href="https://member.acm.org/~shuyuej"> <em>ACM</em></a></li>
 </ol>
 
 <!--Previous Awards-->
