--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
   <li>
-    <a href="https://publons.com/researcher/4330829/shuyue-jia/"><strong>Reviewer</strong></a> for <em>AAAI</em>, <em>IEEE T-NNLS</em>, <em>IEEE T-MM</em>, and <em>ACM TOMM</em>, and <em>IEEE Journal of Biomedical and Health Informatics</em><br>
+    <a href="https://www.webofscience.com/wos/author/record/3315730"><strong>Reviewer</strong></a> for <em>AAAI</em>, <em>IEEE T-NNLS</em>, <em>IEEE T-MM</em>, and <em>ACM TOMM</em>, and <em>IEEE Journal of Biomedical and Health Informatics</em><br>
   </li>
   <li><strong>Student Member</strong> of <em>IEEE</em> and<a href="https://member.acm.org/~shuyuej"> <em>ACM</em></a></li>
 </ol>
