--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <ul style="list-style:none; margin:0; padding:0">
   <li>
     <li>
-      <strong>Aug 2022</strong> One Paper <a href="https://arxiv.org/abs/2006.08924"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
+      <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
     </li>
     <li>
       <strong>Aug 2022</strong> One Paper NLNet accepted by <em>IEEE MMSP</em>
@@ -251,7 +251,7 @@
       <a href="./files/Dynamic-GCN-Survey.pdf"><i class="fa fa-file-powerpoint-o"></i> GNN Survey</a>
       <a href="./files/GCNs-Net.pdf"><i class="fa fa-file-powerpoint-o"></i> Presentation</a>
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
-      <a href="https://arxiv.org/abs/2006.08924"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://ieeexplore.ieee.org/document/9889159"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <br><br>
     <details>
