--- a/index.html
+++ b/index.html
@@ -219,7 +219,10 @@
       <strong>Shuyue Jia</strong>, Baoliang Chen, Dingquan Li, Shiqi Wang
     </div>
     <div style="float:right;">
+      <a href="./files/MMSP/MMSP22_Poster.pdf"><i class="fa fa-file-powerpoint-o"></i> Poster</a>
+      <a href="./files/MMSP/MMSP22_Slides.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
+      <a href="./files/MMSP/MMSP_paper.pdf"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
     <details>
