--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
     </li>
     <li>
-      <strong>Aug 2022</strong> One Paper NLNet accepted by <em>IEEE MMSP</em>
+      <strong>Aug 2022</strong> One Paper <a href="https://shuyuej.com/files/MMSP/MMSP_paper.pdf"> NLNet</a> accepted by <em>IEEE MMSP</em>
       <iframe
         src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
         frameborder="0" scrolling="0" width="85px" height="20px">
