--- a/index.html
+++ b/index.html
@@ -377,30 +377,30 @@
 <h2 id="Selected Awards">Selected Awards</h2>
 
 <ol>
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">-->
-<!--    2021 Standard Chartered Hong Kong Marathon-->
-<!--  </font>-->
-<!--</div>-->
-<!---->
-<!--<br>-->
-<!---->
-<!--<details>-->
-<!--  <summary style="outline:none">Ranking of Half Marathon Race: 318 / 6000 (01:38:14)</summary>-->
-<!--  <div>-->
-<!--    <div style="text-align:center">-->
-<!--      <img width="99%device-width" src="./imgs/marathon2021.jpg" alt="marathon-2021">-->
-<!--    </div>-->
-<!--    <div style="text-align:center">-->
-<!--      <img width="99%device-width" src="./imgs/cityu_marathon_2021.jpg" alt="marathon-2021">-->
-<!--    </div>-->
-<!--    <div style="text-align:center">-->
-<!--      <img width="99%device-width" src="./imgs/cityu-deligation-2021.jpg" alt="marathon-2021">-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</details>-->
-<!--  </li>-->
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        2021 Standard Chartered Hong Kong Marathon
+      </font>
+    </div>
+
+    <br>
+
+    <details>
+      <summary style="outline:none">Ranking of Half Marathon Race: 318 / 6000 (01:38:14)</summary>
+      <div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/marathon2021.jpg" alt="marathon-2021">
+        </div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/cityu_marathon_2021.jpg" alt="marathon-2021">
+        </div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/cityu-deligation-2021.jpg" alt="marathon-2021">
+        </div>
+      </div>
+    </details>
+  </li>
   
   <li>
     <div style="float:left;">
@@ -508,43 +508,43 @@
 <!--</details>-->
 <!--  </li>-->
   
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">-->
-<!--    2017 Jilin City International Marathon-->
-<!--  </font>-->
-<!--</div>-->
-<!---->
-<!--<br>-->
-<!---->
-<!--<details>-->
-<!--  <summary style="outline:none">Ranking of Half Marathon Race: 148 / 4000 (01:47:36)</summary>-->
-<!--  <div>-->
-<!--    <div style="text-align:center">-->
-<!--      <img width="99%device-width" src="./imgs/marathon2017.jpg" alt="marathon-2017">-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</details>-->
-<!--  </li>-->
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        2017 National Marathon Championships (Jilin City Station)
+      </font>
+    </div>
+
+    <br>
+
+    <details>
+      <summary style="outline:none">Ranking of Half Marathon Race: 148 / 4000 (01:47:36)</summary>
+      <div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/marathon2017.jpg" alt="marathon-2017">
+        </div>
+      </div>
+    </details>
+  </li>
   
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">-->
-<!--    3000-meter Steeplechase (The 45th NEEPU Games)-->
-<!--  </font>-->
-<!--</div>-->
-<!---->
-<!--<br>-->
-<!---->
-<!--<details>-->
-<!--  <summary style="outline:none">The Seventh Place</summary>-->
-<!--  <div>-->
-<!--    <div style="text-align:center">-->
-<!--      <img width="99%device-width" src="./imgs/Steeplechase.jpg" alt="marathon-2017">-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</details>-->
-<!--  </li>-->
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
+        3000-meter Steeplechase (The 45th Northeast Electric Power University Games)
+      </font>
+    </div>
+
+    <br>
+
+    <details>
+      <summary style="outline:none">The Seventh Place</summary>
+      <div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/Steeplechase.jpg" alt="marathon-2017">
+        </div>
+      </div>
+    </details>
+  </li>
   
 </ol>
 
