--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
     <br>
 
     <details>
-      <summary style="outline:none">The Seventh Place</summary>
+      <summary style="outline:none">The Seventh Place in college</summary>
       <div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/Steeplechase.jpg" alt="marathon-2017">
