--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
       <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
       <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
       <li><a href="./resources/清华大学各院系重要国际学术会议目录_2018.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学各院系(学科)重要国际学术会议目录 (2018)</a></li>
-    
+      <li><a href="./resources/How-to-be-a-good-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Be A Responsible Reviewer by Prof. Jiebo Luo</a></li>
+
     <p>Good Articles</p>
     <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
     <li><a href="./resources/Computer_Vision_History.pdf"> <i class="fab fa fa-file-pdf-o"></i> A Brief History of Computational Vision by Prof. Song-Chun Zhu</a></li>
