--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
   <li>
     <a href="https://www.webofscience.com/wos/author/record/3315730"><strong>Reviewer</strong></a> for <em>AAAI</em>, <em>IEEE T-NNLS</em>, <em>IEEE T-IP</em>, <em>IEEE T-MM</em>, <em>ACM TOMM</em>, and <em>IEEE Journal of Biomedical and Health Informatics</em><br>
   </li>
-  <li><strong>Student Member</strong> of <em>IEEE</em> and<a href="https://member.acm.org/~shuyuej"> <em>ACM</em></a></li>
+  <li><strong>Student Member</strong> of <em>IEEE</em>, <a href="https://member.acm.org/~shuyuej"> <em>ACM</em></a>, and <em>AAAI</em></li>
 </ol>
 
 <!--Previous Awards-->
