--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
         <li><a href="./files/TensorFlow.pdf"> <i class="fab fa fa-file-pdf-o"></i> TensorFlow for Deep Learning</a></li>
         <li><a href="./files/Crypto-currency-Return-and-Price-Prediction-with-Machine-Learning.pdf"> <i class="fab fa fa-file-pdf-o"></i> Crypto currency Return and Price Prediction with Machine Learning</a></li>
         <li><a href="./files/PySpark-and-Horovod.pdf"> <i class="fab fa fa-file-pdf-o"></i> Big Data Parallel Processing by PySpark and Horovod Distributed Deep Learning</a></li>
-        
+        <li><a href="https://github.com/SuperBruceJia/Sci-Hub-Paper-Download-shell"> <i class="fab fa fa-file-pdf-o"></i> Download Papers via Unix Shell (Terminal) From Sci-Hub</a></li>
+        <li><a href="https://github.com/SuperBruceJia/Google-Scholar-Citations-Download"> <i class="fab fa fa-file-pdf-o"></i> Retrieve and Download Google Scholar Citation Papers</a></li>
+        <li><a href="https://github.com/SuperBruceJia/dynamic-web-crawlering-python"> <i class="fab fa fa-file-pdf-o"></i> Dynamic (Ajax) Web Crawler in Python</a></li>
+        <li><a href="https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp"> <i class="fab fa fa-file-pdf-o"></i> Deploy Machine Learning and Deep Learning Models with Flask and Docker as Web Applications</a></li>
+
+
       <p>Other Resources</p>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua JIA</a></li>
         <li><a href="./resources/How-to-be-a-good-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Be a Responsible Reviewer by Prof. Jiebo Luo</a></li>
