--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
         <li><a href="./resources/中国科学院SCI分区表_2019.xls"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院SCI分区表 (2019)</a></li>
         <li><a href="./resources/中科院国际期刊预警名单.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国科学院国际期刊预警名单</a></li>
         <li><a href="./resources/清华大学各院系重要国际学术会议目录_2018.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学各院系(学科)重要国际学术会议目录 (2018)</a></li>
-      
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/python"> <i class="fab fa-github"></i> Python编码风格与规范 @ Tencent</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/Programming-Standards/cpp"> <i class="fab fa-github"></i> C++代码规范 @ Tencent</a></li>
+
       <p>Good Articles</p>
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Songchun Zhu</a></li>
         <li><a href="./resources/徐轶青-读博那些事儿.pdf"> <i class="fab fa fa-file-pdf-o"></i> 读博那些事儿 by Prof. Yiqing Xu</a></li>
