--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
     </li>
     <li>
-      <strong>Aug 2022</strong> One Paper <a href="https://shuyuej.com/files/MMSP/MMSP_paper.pdf"> NLNet</a> accepted by <em>IEEE MMSP</em>
+      <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/abstract/document/9950035"> NLNet</a> accepted by <em>IEEE MMSP</em>
       <iframe
         src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
         frameborder="0" scrolling="0" width="85px" height="20px">
@@ -234,7 +234,7 @@
       <a href="./files/MMSP/MMSP22_Poster.pdf"><i class="fa fa-file-powerpoint-o"></i> Poster</a>
       <a href="./files/MMSP/MMSP22_Slides.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
-      <a href="./files/MMSP/MMSP_paper.pdf"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://ieeexplore.ieee.org/abstract/document/9950035"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <em><br>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
     <details>
