--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
       <p>Other Resources</p>
-        <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua JIA</a></li>
+        <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
         <li><a href="./resources/How-to-be-a-good-Reviewer.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Be a Responsible Reviewer by Prof. Jiebo Luo</a></li>
         <li><a href="https://github.com/SuperBruceJia/CVPR-LaTeX-Paper-Template"> <i class="fab fa-github"></i> CVPR Paper, Supplementary Materials, and Rebuttal LaTeX Templates</a></li>
         <li><a href="https://github.com/SuperBruceJia/Poster_Template"> <i class="fab fa-github"></i> PowerPoint (PPT) and LaTeX Demos of Academic Posters</a></li>
