--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
   
   <br>
   
-  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp
-  <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> GitHub</a> 
+  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>
+  <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> GitHub</a>
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> 
   <a href="https://www.overleaf.com/read/dxznkgvxftvt"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>
+<!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
 
 <!--  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp-->
 <!--  <a href="./Chinese-Resume/ShuyueJia-Chinese-Resume.pdf"> <i class="fab fa fa-file-pdf-o"></i> 简历</a>&nbsp-->
