--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
 <ul style="list-style:none; margin:0; padding:0">
   <li>
     <li>
+      <strong>Jan 2023</strong> A <a href="./files/Presentation/A_Summary_Three_Projects.pdf"> Presentation</a> of Three Selected Projects: IQA Regression and EEG Classification.
+    <li>
       <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
     </li>
     <li>
