--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <li><a href="https://github.com/SuperBruceJia/Google-Scholar-Citations-Download"> <i class="fab fa-github"></i> Retrieve and Download Google Scholar Citation Papers</a></li>
         <li><a href="https://github.com/SuperBruceJia/dynamic-web-crawlering-python"> <i class="fab fa-github"></i> Dynamic (Ajax) Web Crawler in Python</a></li>
         <li><a href="https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp"> <i class="fab fa-github"></i> Deploy Machine Learning and Deep Learning Models with Flask and Docker as Web Applications</a></li>
+        <li><a href="https://github.com/SuperBruceJia/paper-reading/blob/master/shell-script/ppt2pdf.md"> <i class="fab fa-github"></i> Convert PowerPoint (PPT) to PDF with Animations</a></li>
       
       <p>Other Resources</p>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
