--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
   <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>
-<!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
-
-<!--  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp-->
-<!--  <a href="./Chinese-Resume/ShuyueJia-Chinese-Resume.pdf"> <i class="fab fa fa-file-pdf-o"></i> 简历</a>&nbsp-->
-<!--  <a href="https://github.com/SuperBruceJia"><i class="fab fa fa-github"></i> GitHub</a> -->
-<!--  <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>-->
-<!--  <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>&nbsp-->
-  <!--  <?php $lang="en"; $userid="PfpEP60AAAAJ"; $pagesize="100"; include 'css/curl.php'; ?>-->
-  <!--  <?php include 'css/citation_chart.php'; ?> -->
-  <!--  &nbsp-->
+  <!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
+  
+  <!--  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>&nbsp-->
+  <!--  <a href="./Chinese-Resume/ShuyueJia-Chinese-Resume.pdf"> <i class="fab fa fa-file-pdf-o"></i> 简历</a>&nbsp-->
+  <!--  <a href="https://github.com/SuperBruceJia"><i class="fab fa fa-github"></i> GitHub</a> -->
+  <!--  <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>-->
+  <!--  <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>&nbsp-->
+    <!--  <?php $lang="en"; $userid="PfpEP60AAAAJ"; $pagesize="100"; include 'css/curl.php'; ?>-->
+    <!--  <?php include 'css/citation_chart.php'; ?> -->
+    <!--  &nbsp-->
   
 </p>
 
@@ -193,32 +193,31 @@
         frameborder="0" scrolling="0" width="85px" height="20px">
       </iframe>.
     </li>
-<!--<li><strong>Apr 2022</strong> CV Research Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing, working on the video panoptic segmentation.</li>-->
+    <!--<li><strong>Apr 2022</strong> CV Research Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing, working on the video panoptic segmentation.</li>-->
     <strong>Dec 2021</strong> One Paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.</li>
-<!--  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai, working on the medical named entity recognition, concept mapping, etc.</li>-->
-  <li>
-    <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, 
-    a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification
-    <iframe
-      src="https://img.shields.io/github/stars/SuperBruceJia/EEG-DL?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
-    </iframe>
-    <iframe
-      src="https://img.shields.io/github/forks/SuperBruceJia/EEG-DL?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
-    </iframe>.
-  </li>
-  <li>
-    <strong>Feb 2020</strong> One Paper<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"> ESI-CNNs</a> accepted by <em>Journal of Neural Engineering</em> 
-    <iframe
-      src="https://img.shields.io/github/stars/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow?style=social"
-      frameborder="0" scrolling="0" width="90px" height="20px">
-    </iframe>
-    <iframe
-      src="https://img.shields.io/github/forks/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow?style=social"
-      frameborder="0" scrolling="0" width="90px" height="20px">
-    </iframe>.
-  </li>
+    <!--  <li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai, working on the medical named entity recognition, concept mapping, etc.</li>-->
+    <li>
+      <strong>Apr 2020</strong> Open Source <a href="https://github.com/SuperBruceJia/EEG-DL"> EEG-DL</a>, a Deep Learning (DL) library written by TensorFlow for EEG Signals Classification
+      <iframe
+        src="https://img.shields.io/github/stars/SuperBruceJia/EEG-DL?style=social" 
+        frameborder="0" scrolling="0" width="90px" height="20px">
+      </iframe>
+      <iframe
+        src="https://img.shields.io/github/forks/SuperBruceJia/EEG-DL?style=social" 
+        frameborder="0" scrolling="0" width="90px" height="20px">
+      </iframe>.
+    </li>
+    <li>
+      <strong>Feb 2020</strong> One Paper<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"> ESI-CNNs</a> accepted by <em>Journal of Neural Engineering</em> 
+      <iframe
+        src="https://img.shields.io/github/stars/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow?style=social"
+        frameborder="0" scrolling="0" width="90px" height="20px">
+      </iframe>
+      <iframe
+        src="https://img.shields.io/github/forks/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow?style=social"
+        frameborder="0" scrolling="0" width="90px" height="20px">
+      </iframe>.
+    </li>
 </ul>
 
 <!--Recent Publications-->
@@ -575,7 +574,10 @@
 </body>
   
 <footer style="text-align:center">
-  <span>Copyright &copy;2020 Shuyue Jia</span>
+  Three Persons I Admire The Most:<br>
+  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://en.wikipedia.org/wiki/Stephen_Chow">Stephen Chow</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
+  
+  <span>Copyright &copy;2020 Bruce S. Jia</span>
 </footer>
 
 <br>
