--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>Jan 2023</strong> A <a href="./files/Presentation/A_Summary_Three_Projects.pdf"> Presentation</a> and its <a href="./files/Presentation/A_Summary_Three_Projects_Animations.pdf">Animation Version</a> of IQA Regression and EEG Classification.
+    <strong>Jan 2023</strong> A <a href="./files/Presentation/A_Summary_Three_Projects.pdf"> Presentation</a> of IQA Regression and EEG Classification.
   </li>
   <li>
     <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>.
