--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       <summary style="outline:none">here</summary>
       
       <p>Graph Neural Network (GNN)</p>
+        <li><a href="./files/EEG/GCNs-Net-Summary.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Convolutional Neural Networks</a></li>
+        <li><a href="./files/EEG/BiLSTM-GCN-Summary.pdf"> <i class="fab fa fa-file-pdf-o"></i> Attention-based BiLSTM-GCN</a></li>
         <li><a href="./files/EEG/Dynamic-GCN-Survey.pdf"> <i class="fab fa fa-file-pdf-o" style="text-decoration:none"></i> Dynamic Graph Convolutional Neural Networks</a></li>
-        <li><a href="./files/EEG/EEG-Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Convolutional Neural Networks</a></li>
-        <li><a href="./files/EEG/EEG-Research.pdf"> <i class="fab fa fa-file-pdf-o"></i> Attention-based BiLSTM-GCN</a></li>
       
       <p>Natural Language Processing (NLP)</p>
         <li><a href="./files/Graph-Matching-Paper-Survey.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Matching</a></li>
